--- a/readme.html
+++ b/readme.html
@@ -2,9 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Readme</title>
 </head>
 <body>
-$END$
+<header>
+    <h2>Инструкция по настройке PWA</h2>
+</header>
+<main>
+    <div id="creditals">
+        <h4>Учетные данные</h4>
+        <p>
+            Пароль: <input type="text"><br>
+            E-Mail: <input type="text"><br>
+        </p>
+        <h5>vps</h5>
+        <p>
+            ip: <input type="text"><br>
+            пароль: <input type="text"><br>
+        </p>
+        <h5>Домен</h5>
+        <p>
+            основной домен: <input type="text"><br>
+            поддомены: <input type="text"><br>
+        </p>
+        <h5>Pusher</h5>
+        <p>
+            PUSHER_APP_ID: <input type="text"><br>
+            PUSHER_APP_KEY: <input type="text"><br>
+            PUSHER_APP_SECRET: <input type="text"><br>
+            PUSHER_APP_CLUSTER: <input type="text"><br>
+        </p>
+    </div>
+    <div id="registration">
+        <h4>Регистрация</h4>
+        <h5>cp.vdsina.ru/vds</h5>
+        <p>
+            без авто резервной копии <br>
+            apt update -y <br>
+            apt upgrade -y <br>
+            apt install apache2 -y <br>
+            проверяем по ip <br>
+        </p>
+        <h5>temp-mail.org</h5>
+        <p>
+            12 месяцев, zip 1073**, заполняем все <br>
+            входим, service > my domains > freedom dns <br>
+            добавляем поддомены backend frontend s1 s2 s3 <br>
+        </p>
+        <h5>pusher.com</h5>
+        <p>
+            Channels <br>
+            название my-channel <br>
+            App Settings > Enable client events <br>
+        </p>
+
+
+    </div>
+
+</main>
+
+
+
 </body>
 </html>
