--- a/readme.html
+++ b/readme.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Readme</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
 <header>
     <h2>Инструкция по настройке PWA</h2>
+    <style>
+        .test{
+            color: green;
+        }
+    </style>
 </header>
 <main>
     <div id="creditals">
@@ -41,7 +47,7 @@
             apt update -y <br>
             apt upgrade -y <br>
             apt install apache2 -y <br>
-            проверяем по ip <br>
+            <span class="test">проверяем - ip в браузер, должна открыться страница apache</span> <br>
         </p>
         <h5>temp-mail.org</h5>
         <p>
@@ -55,8 +61,47 @@
             название my-channel <br>
             App Settings > Enable client events <br>
         </p>
+    </div>
+    <div id="server-setup">
+        <h4>Настройка сервера</h4>
+        <h5>Пакеты</h5>
+        <p>
+            apt install php -y <br>
+            apt install zip unzip -y <br>
+            apt install php-mysql -y <br>
+            apt install php-mbstring -y <br>
+            apt install php-tokenizer -y <br>
+            apt install php-xml -y <br>
+            apt install php-json -y <br>
+            apt install php-common -y <br>
+            apt install php-gd -y <br>
+            apt install php-zip -y <br>
+            apt install php-cli -y <br>
+            apt install php-curl -y <br>
+            apt install php-intl -y <br>
+            apt install php-bcmath -y <br>
+            apt install php-imap -y <br>
+            apt install php-tokenizer -y <br>
+            apt install php-curl -y <br>
+            apt install mysql-server -y <br>
+            apt install nodejs -y <br>
+            apt install npm -y <br>
+            apt install certbot python3-certbot-apache -y <br>
+            apt install composer -y <br>
+        </p>
 
-
+        <h5>Swap</h5>
+        <p>
+            free -m <br>
+            mkdir -p /var/_swap_ <br>
+            cd /var/_swap_ <br>
+            dd if=/dev/zero of=swapfile bs=1M count=2000 <br>
+            mkswap swapfile <br>
+            swapon swapfile <br>
+            chmod 600 swapfile <br>
+            echo "/var/_swap_/swapfile none swap sw 0 0" >> /etc/fstab <br>
+            free -m <br>
+        </p>
     </div>
 
 </main>
