--- a/readme.html
+++ b/readme.html
@@ -14,7 +14,7 @@
         }
     </style>
 </header>
-<main>
+<main class="container">
     <div id="creditals">
         <h4>Учетные данные</h4>
         <p>
